Workout log work, link up body with exercises and loads

--- a/app.less
+++ b/app.less
@@ -2,10 +2,25 @@
 paper-toolbar, #middleBar, #topBar{
   height: 50px;
 }
+
+.nav-toolbar{
+  background-color: #F0F0F0 !important;
+  font-size: 14px !important;
+  color: grey !important;
+}
+
 .padding-left{
   margin-left: 10px;
 }
-
+.padding-right{
+  margin-right: 10px;
+}
+.padding-top{
+  margin-top: 10px;
+}
+.padding-bottom{
+  margin-bottom: 10px;
+}
 .tool-icon{
   margin: 7px;
   width: 23px;
@@ -19,7 +34,7 @@ paper-toolbar, #middleBar, #topBar{
   font-size: 12px;
   letter-spacing: 2px;
   height: 50px;
-  background-color: rgb(50, 115, 169);
+  background-color: rgb(70, 144, 208);
   width: 100px;
 
   #large{
@@ -39,7 +54,9 @@ paper-toolbar, #middleBar, #topBar{
   color: rgb(164, 207, 229);
   margin-top: -10px;
 }
-
+.subtext{
+  color: rgb(180,180,180);
+}
 .temp-fab{
   position: absolute;
   right: 15px;
@@ -50,4 +67,11 @@ paper-toolbar, #middleBar, #topBar{
   background-color:#64c15a;
   font-size: 25px;
   font-weight: 100;
+}
+
+input{
+  border: none;
+}
+input:focus{
+  outline:none;
 }
