--- a/app/fc-user-list/fc-user-list.less
+++ b/app/fc-user-list/fc-user-list.less
@@ -11,12 +11,6 @@ paper-icon-item{
   border-radius: 40px;
   border: 1px solid rgb(200,200,200);
 }
-.search-bar, input, ::-webkit-input-placeholder{
-  font-family: 'Roboto';
-  color: #C3C3C3;
-  background-color: white;
-  font-size: 14px;
-}
 .search-bar{
   height:35px;
   width: 100%;
@@ -29,7 +23,9 @@ input{
   font-size: 16px;
   width: 90%;
   color: grey;
+  text-align: left;
 }
 input:focus{
   outline:none;
+  border-bottom: none;
 }
