--- a/app/fc-workout-log/fc-exercise-entry/fc-exercise-entry.less
+++ b/app/fc-workout-log/fc-exercise-entry/fc-exercise-entry.less
@@ -6,21 +6,6 @@
   min-height: 50px;
   padding: 15px;
 }
-input{
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  border-bottom: 1px solid grey;
-  text-align: center;
-  font-family: 'Roboto';
-  color: rgb(69,69,69);
-  height:20px;
-}
-
-input:focus{
-  outline:none;
-  border-bottom: 1px solid grey;
-}
 
 ::-webkit-input-placeholder{
   color: rgb(205,205,205);
@@ -31,4 +16,53 @@ input:focus{
 
 .weight-input{
   width: 45px;
+}
+.comments-section{
+  margin-top: 15px;
+  font-size: 12px;
+  color: rgb(120,120,120);
+}
+
+.selected-box{
+  width: 10px;
+  height: 75px;
+  background-color: rgb(70, 144, 208);
+  margin-right: 15px;
+}
+
+paper-item{
+  padding-left: 0;
+  paper-item-body{
+    margin-left: 20px;
+  }
+}
+
+iron-collapse{
+  border-bottom: 1px solid rgb(182, 182, 182);
+}
+input{
+  border-bottom: 1px solid grey;
+  text-align: center;
+  font-family: 'Roboto';
+  color: rgb(69,69,69);
+  height:20px;
+}
+
+.name-input{
+  width: 400px;
+  font-size: 16px;
+}
+.comments-input{
+  font-size: 12px;
+  color: rgb(90,90,90);
+}
+
+.name-input, .comments-input{
+  text-align: left;
+  border-bottom: none;
+}
+#exercise-tool{
+  color: grey;
+  background-color: white;
+  border-top: 1px solid rgb(182, 182, 182);
 }
