Add client creation, move api calls to controller, store token in controller

--- a/app/fc-user-list/fc-user-list.less
+++ b/app/fc-user-list/fc-user-list.less
@@ -29,3 +29,15 @@ input:focus{
   outline:none;
   border-bottom: none;
 }
+#addClientDialog{
+  font-size: 15px;
+
+  input{
+    background-color:rgb(215, 215, 215);
+    color: rgb(40, 40, 40);
+    font-family: 'Roboto';
+    padding: 5px;
+    width: 250px;
+    height: 20px;
+  }
+}
