--- a/app.less
+++ b/app.less
@@ -2,13 +2,30 @@
 paper-toolbar, #middleBar, #topBar{
   height: 50px;
 }
-
+paper-toolbar{
+  background: rgb(70, 144, 208);
+  font-size: 16px;
+}
 .nav-toolbar{
-  background-color: #F0F0F0 !important;
+  background: #F0F0F0 !important;
   font-size: 14px !important;
   color: grey !important;
 }
 
+.dialog-toolbar{
+  #middleBar, #topBar{
+    height: 40px !important;
+  }
+  background: rgb(70, 144, 208) !important;
+  height: 40px;
+  font-size: 14px !important;
+}
+
+.primary-button{
+  background-color: rgb(70, 144, 208);
+  color: white;
+  margin-top: 25px
+}
 .padding-left{
   margin-left: 10px;
 }
@@ -25,7 +42,6 @@ paper-toolbar, #middleBar, #topBar{
   margin: 7px;
   width: 23px;
   height:23px;
-  color: #297CA6;
 }
 
 #logo{
@@ -45,7 +61,7 @@ paper-toolbar, #middleBar, #topBar{
 
 .title{
   font-weight: 400;
-  font-size: 12px;
+  font-size: 14px;
   letter-spacing: 2px;
 }
 
