Add workout-history-list and replace temp fab with paper fab

--- a/app.less
+++ b/app.less
@@ -79,8 +79,7 @@ paper-toolbar{
   bottom: 15px;
   width:45px;
   height:45px;
-  border-radius: 30px;
-  background-color:#64c15a;
+  background-color: #64c15a !important;
   font-size: 25px;
   font-weight: 100;
 }
